--- a/src/configs/train_config.yml
+++ b/src/configs/train_config.yml
@@ -1,17 +1,18 @@
 output_root: '../'
 pytorch_data_dir: '/datadrive/pytorch-data/'
 experiment_name: "exp1"
-log_dir: "cocostuff27"
-azureml_logging: True
+log_dir: "cocostuff1-log"
+azureml_logging: False
 submitting_to_aml: False
+object_name: "elephant"
 
 # Loader params
-num_workers: 24
+num_workers: 6
 max_steps: 5000
-batch_size: 16
+batch_size: 8
 
 num_neighbors: 7
-dataset_name: "cocostuff27"
+dataset_name: "cocostuff1"
 
 # Used if dataset_name is "directory"
 dir_dataset_name: ~
