vit_base selected as there is no pretrained network for vit_small

--- a/src/configs/train_config.yml
+++ b/src/configs/train_config.yml
@@ -28,7 +28,7 @@ loader_crop_type: "center"
 extra_clusters: 0
 use_true_labels: False
 use_recalibrator: False
-model_type: "vit_small"
+model_type: "vit_base"
 arch: "dino"
 use_fit_model: False
 dino_feat_type: "feat"
