--- a/src/configs/train_config.yml
+++ b/src/configs/train_config.yml
@@ -60,12 +60,12 @@ correspondence_weight: 1.0
 
 
 # IAROA vit small 1/31/22
-neg_inter_weight: 0.63
-pos_inter_weight: 0.25
-pos_intra_weight: 0.67
-neg_inter_shift: 0.46
-pos_inter_shift: 0.12
-pos_intra_shift: 0.18
+# neg_inter_weight: 0.63
+# pos_inter_weight: 0.25
+# pos_intra_weight: 0.67
+# neg_inter_shift: 0.46
+# pos_inter_shift: 0.12
+# pos_intra_shift: 0.18
 
 # Potsdam vit small 1/31/22
 #neg_inter_weight: 0.63
@@ -86,13 +86,13 @@ pos_intra_shift: 0.18
 
 ## Cocostuff27 10/3 vit_base
 
-#neg_inter_weight: 0.1538476246415498
-#pos_inter_weight: 1
-#pos_intra_weight: 0.1
-#
-#neg_inter_shift: 1
-#pos_inter_shift: 0.2
-#pos_intra_shift: 0.12
+neg_inter_weight: 0.1538476246415498
+pos_inter_weight: 1
+pos_intra_weight: 0.1
+
+neg_inter_shift: 1
+pos_inter_shift: 0.2
+pos_intra_shift: 0.12
 
 
 ## Cocostuff27 10/3 vit_small
