--- a/src/configs/eval_config.yml
+++ b/src/configs/eval_config.yml
@@ -1,17 +1,17 @@
-output_root: '../'
+output_root: '../outputs'
 pytorch_data_dir: '/datadrive/pytorch-data/'
-experiment_name: "cocostuff"
+experiment_name: "exp1"
 res: 320
-batch_size: 8
-num_workers: 24
-run_picie: True
-run_crf: True
+batch_size: 4
+num_workers: 4
+run_picie: False
+run_crf: False
 run_prediction: True
 dark_mode: True
 use_ddp: False
 
 model_paths:
-  - "../saved_models/cocostuff27_vit_base_5.ckpt"
+  # - "../saved_models/cocostuff27_vit_base_5.ckpt"
   #- "../saved_models/cityscapes_vit_base_1.ckpt"
   #- "../saved_models/potsdam_test.ckpt"
 
