--- a/src/configs/train_config.yml
+++ b/src/configs/train_config.yml
@@ -1,5 +1,5 @@
 output_root: '../outputs'
-pytorch_data_dir: '/datadrive/pytorch-data/'
+pytorch_data_dir: '../datasets'
 experiment_name: "exp1"
 log_dir: "minicoco-log"
 azureml_logging: False
